--- a/rainyday/tsconfig.json
+++ b/rainyday/tsconfig.json
@@ -4,5 +4,8 @@
     "strict": true,
     "jsx": "react-jsx",
     "types": ["react", "react-native"],
+    "paths": {
+      "@firebase/auth": ["./node_modules/@firebase/auth/dist/index.rn.d.ts"]
+    }
   }
 }
