--- a/rainyday/tsconfig.json
+++ b/rainyday/tsconfig.json
@@ -1,11 +1,11 @@
 {
-  "extends": "expo/tsconfig.base",
   "compilerOptions": {
+        "paths": {
+      "@firebase/auth": ["./node_modules/firebase/node_modules/@firebase/auth/dist/index.rn.d.ts"]
+    },
     "strict": true,
     "jsx": "react-jsx",
     "types": ["react", "react-native"],
-    "paths": {
-      "@firebase/auth": ["./node_modules/@firebase/auth/dist/index.rn.d.ts"]
-    }
-  }
+  },
+  "extends": "expo/tsconfig.base",
 }
